Merged Colour Stuff into Dashboard page
Hopefully all good!